Bug 36365 - [Qt] [Performance] GraphicsLayer: constructing the layers takes too long
Summary: [Qt] [Performance] GraphicsLayer: constructing the layers takes too long
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Noam Rosenthal
URL: http://script.aculo.us/stuff/sl150110...
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-19 07:08 PDT by Noam Rosenthal
Modified: 2010-04-26 03:24 PDT (History)
3 users (show)

See Also:


Attachments
make GraphicsLayerQt manage the cache itself instead of using QGraphicsItem::cache (7.53 KB, patch)
2010-04-21 13:10 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff
Fixed a problem in the first patch. Tested with all relevant LayoutTests (7.75 KB, patch)
2010-04-21 15:00 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff
style/comments (8.08 KB, patch)
2010-04-21 15:15 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Noam Rosenthal 2010-03-19 07:08:56 PDT
There's a wait of ~350ms on some machines between clicking on the animation and until it starts.
That seems to be related to overhead created when constructing the GraphicsLayer scene.
Comment 1 Noam Rosenthal 2010-04-21 13:10:51 PDT
Created attachment 53981 [details]
make GraphicsLayerQt manage the cache itself instead of using QGraphicsItem::cache
Comment 2 Noam Rosenthal 2010-04-21 15:00:53 PDT
Created attachment 53995 [details]
Fixed a problem in the first patch. Tested with all relevant LayoutTests
Comment 3 Noam Rosenthal 2010-04-21 15:15:04 PDT
Created attachment 53996 [details]
style/comments
Comment 4 WebKit Commit Bot 2010-04-23 15:02:26 PDT
Comment on attachment 53996 [details]
style/comments

Clearing flags on attachment: 53996

Committed r58190: <http://trac.webkit.org/changeset/58190>
Comment 5 WebKit Commit Bot 2010-04-23 15:02:31 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Simon Hausmann 2010-04-26 03:23:55 PDT
Revision r58190 cherry-picked into qtwebkit-2.0 with commit 991f4f6002271f4f98cf6a9057184bf3954a1d0c